--- a/index.html
+++ b/index.html
@@ -6,19 +6,29 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculadora</title>
 </head>
+
+
 <body>
     <div class="general">
         <h1>Calculadora HTML</h1>
+
+        <!--------------OPERADORES------------>
 
         <div class="input"><input type="text" id="operador1" placeholder="Operador 1"></div>
         <div class="input"><input type="text" id="operadores" placeholder="+,-,*,/"></div>
         <div class="input"><input type="text" id="operador2" placeholder="Operador 2"></div>
 
+        <!-------------- BOTON------------>
+
         <button id="calcular">Calcular...</button>
 
+        <!--------------RESULTADO------------>
         <div class="resultado" id="resultado"></div>
-    </div>
 
+    </div>
+    
+        <!--------------JS------------>
     <script src="script.js"></script>
+    
 </body>
 </html>
