--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <div class="general">
-        <h1>Calculadora HTML</h1>
+        <h1>Calculadora HTML !!</h1>
 
         <!--------------OPERADORES------------>
 
         <div class="input"><input type="text" id="operador1" placeholder="Operador 1"></div>
-        <div class="input"><input type="text" id="operadores" placeholder="+,-,*,/"></div>
+        <div class="input"><input type="text" id="operadores" placeholder="+ , - , *, / , ** , %"></div>
         <div class="input"><input type="text" id="operador2" placeholder="Operador 2"></div>
 
         <!-------------- BOTON------------>
@@ -26,7 +26,7 @@
         <div class="resultado" id="resultado"></div>
 
     </div>
-    
+
         <!--------------JS------------>
     <script src="script.js"></script>
     
